unpackaged/main/default/objects/Operations_Region__c/Operations_Region__c.object-meta.xml
<CustomObject>
    <description>Maps operation region with their corresponding roles.</description>
    <label>Operations Region Role</label>
    <nameField>
        <label>Operations Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Region Roles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>