unpackaged/main/default/objects/Operations_Region__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_RegionTM</relationshipName>
    <type>Lookup</type>
</CustomField>