unpackaged/main/default/objects/Operations_Region__c/recordTypes/New_Zealand.recordType-meta.xml
<RecordType>
    <fullName>New_Zealand</fullName>
    <active>true</active>
    <label>New Zealand</label>
</RecordType>