unpackaged/main/default/objects/Operations_Region__c/validationRules/RCM_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>RCM_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>RCM - can be assigned to profiles: Light Commercial Manager, NZ Light Commercial Manager</description>
    <errorConditionFormula>ISPICKVAL(Role__c, &#39;RCM&#39;) &amp;&amp; !CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.RCM_Profiles__c,  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role RCM can only be assigned to users of profiles: Light Commercial Manager, NZ Light Commercial Manager</errorMessage>
</ValidationRule>