unpackaged/main/default/objects/Operations_Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Team_Member__c</columns>
    <columns>Country__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>